saves/test/demo_full_20240802_193545/fsm_ps2data/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp fsm_ps2data_tb.v fsm_ps2data.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
fsm_ps2data_tb.v:139: $finish called at 490000 (1ps)

iverilog cmd 2 error:

